# voice-mcp-agent

./: .env.example  .gitignore  CLOUDFLARE-SSL-EMERGENCY-GUIDE.md  CLOUDFLARE-TOKEN-GUIDE.md  COMPLETE_USERS_GUIDE.md  Cargo.toml  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  Dockerfile.bridge  Makefile  QUICK-SSL-CHECK.sh  README_OPTIMAL_SETUP.md  SIMPLE-SSL-FIX.sh  SSL-FIX.sh  SSL-TROUBLESHOOTING-GUIDE.md  agent_bridge.py  agent_core.py  bridge_integration_test.py  check_deps.py  claudedoctor  compose.yml  coturn.conf  custom_whisper_stt.py  egress-config.yaml  fix-cloudflare-ssl.sh  fix-ssl-certificates.sh  hotkey_stt.py  ingress-config.yaml  livekit-config.yaml  livekit.yaml  mac_client.py  mac_stt.py  mcp_servers.yaml  monitor-livekit.sh  package-lock.json  requirements-system.txt  requirements.txt  run_tests.py  setup_bridge.sh  setup_system_stt.sh  system_stt_daemon.py  (+8 more)
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
docs/: macbridge.md
lk.delo.sh/: caddy.yaml  cloud_init.ubuntu.yaml  egress.yaml  ingress.yaml  livekit.yaml
mcp_client/: auth.py
scripts/2025-09-02/: EMERGENCY-SSL-FIX.sh  ULTIMATE-SSL-EMERGENCY-FIX.sh  cloudflare-api-emergency-fix.sh  deploy-livekit.sh  deploy-ssl-emergency.sh  emergency-ssl-fix.sh  fix-traefik-cloudflare.sh  test-cloudflare-api.sh  validate-setup.sh
src-tauri/src/: lib.rs  main.rs
tests/: INTEGRATION_TEST_MASTER_PLAN.md  TESTING_STRATEGY.md  TEST_SUITE_SUMMARY.md  TROUBLESHOOTING_GUIDE.md  VALIDATION_CHECKLIST.md  VALIDATION_CHECKLISTS.md
tests/integration/: test_livekit_stack.py  (+4 more)
(+8 files in other folders)
